# IMGWTools

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PRD.md  README.md  environment.yml  hydro_stats.py  imgw.py  imgw_api.py  pyproject.toml  spatial.py
Notebooks/: IMGW API.ipynb  IMGW data store.ipynb  Spatial.ipynb  Stats.ipynb
code/: hydro_stats.py  imgw_api.py  imgw_datastore.py  meteo_columns_config.py  meteo_stats.py  pmax_beta_distr.html  pmaxtp_gui.html  pmaxtp_gui.py
data/desc/: zjaw_info.txt
data/desc/dane_hydrologiczne/: codz_info.txt  mies_info.txt
data/desc/dane_meteorologiczne/: k_m_t_format.txt  s_m_t_format.txt  s_t_format.txt
data/shp/: Polska.qix  polska.dbf
docs/: ARCHITECTURE.md  DEVELOPMENT_STANDARDS.md  PROGRESS.md
src/imgwtools/: _version.py  config.py  fetch.py
src/imgwtools/api/: main.py  schemas.py
src/imgwtools/api/routes/: download.py  hydro.py  meteo.py  pmaxtp.py
src/imgwtools/cli/: admin.py  fetch.py  list_cmd.py  main.py
src/imgwtools/core/: imgw_api.py  imgw_datastore.py  imgw_spatial.py  url_builder.py
src/imgwtools/db/: __init__.py  parsers.py
src/imgwtools/web/: app.py
src/imgwtools/web/templates/: map.html
src/imgwtools/web/templates/partials/: download_links.html  pmaxtp_result.html  station_table.html
