[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imgwtools"
version = "1.0.0"
description = "Narzedzie do pobierania danych publicznych z IMGW-PIB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Piotr de Bever", email = "piotr@example.com" }
]
keywords = ["imgw", "hydrology", "meteorology", "poland", "weather", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
    "typer>=0.9",
    "httpx>=0.25",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "requests>=2.31",
    "pandas>=2.0",
    "pyproj>=3.6",
    "pyshp>=2.3",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.6",
]

[project.scripts]
imgw = "imgwtools.cli.main:app"

[project.urls]
Homepage = "https://github.com/Daldek/IMGWTools"
Repository = "https://github.com/Daldek/IMGWTools"
Issues = "https://github.com/Daldek/IMGWTools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/imgwtools"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["imgwtools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
